--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -1,11 +1,29 @@
 docs_list_title: NEURON Tutorial Lessons
 docs:
 
-- title: Introduction
-  url: lessons/intro
-
 - title: Setup
   url: setup
+  
+- title: Introduction
+  url: lessons/intro
+  pagurl: intro
 
-- title: Models
-  url: model
+- title: Simple model
+  url: lessons/simple
+  pagurl: simple
+  
+- title: Reusable models (HOC)
+  url: lessons/hoc
+  pagurl: hoc
+
+- title: Synaptic integration
+  url: lessons/synaptic
+  pagurl: synaptic
+  
+- title: Importing real data
+  url: lessons/real
+  pagurl: real
+  
+- title: Simple Network
+  url: lessons/network
+  pagurl: network
