--- a/_data/nav.yaml
+++ b/_data/nav.yaml
@@ -21,7 +21,7 @@ docs:
   url: lessons/synaptic
   pagurl: synaptic
   
-- title: Complex model (HOC)
+- title: Complex model
   url: lessons/complex
   pagurl: complex
   
